----------------------
phpMyAdmin - Changelog
----------------------

$Id$
$Source$

2004-01-06 Alexander M. Turek  <therising@derrabus.de>
    * libraries/charset_conversion.lib.php: Skip charset conversion code if
      input charset and output charset are the same.

2004-01-05 Garvin Hicking <returnofthegarv@supergarv.de>
    * browse_foreigners.php, tbl_change.php: Sort key/value pairs
      as discussed in RFE #868369. Made foreigner window resizable.
    * libraries/functions.js: Reverted row marker patch. See RFE #867284
      for details.
    * libraries/display_tbl.lib.php, libraries/display_tbl_links.lib.php,
      libraries/functions.js: Upon clicking on a result row, de/activate
      the checkbox next to it. Only makes sense for horizontal mode. Can be
      deactivated by setting BrowseMarkerColor to an empty string in config.inc.php.

2004-01-05 Alexander M. Turek  <rumors@derrabus.de>
    * tbl_properties_operations.php: Changing a table's charset changed the
      charset of all fields (MySQL >= 4.1.1).

2004-01-04 Alexander M. Turek  <beggaronabeachofgold@derrabus.de>
    * libraries/config_import.lib.php: Added missing compatibility code for
      $cfg['RecodingEngine'].

2004-01-02 Alexander M. Turek  <wecantdance@derrabus.de>
    * libraries/mysql_charsets.lib.php, libraries/sqlparser.lib.php:
      MySQL collations are now parsed and highlighted.
    * libraries/export/sql.php: Include charset / collation information in db
      export.

2004-01-02 Marc Delisle  <lem9@users.sourceforge.net>
    * db_details_structure.php: bug 868996, debug code still in place,
      thanks to Matthias Fichtner (mfichtner)
    * browse_foreigners.php: paging does not work; obey RepeatCells=0
    * libraries/display_tbl.lib.php: bug 857743, SHOW FIELDS

2003-12-30 Michal Cihar  <happynewyer@cihar.com>
    * lang/czech: Updated.
    * lang/*: Fixed typo s/Chech-Slovak/Czech-Slovak/.

2003-12-30 Alexander M. Turek  <facevalue@derrabus.de>